--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@clerk/nextjs": "^6.31.9",
     "@hookform/resolvers": "^5.2.2",
+    "@prisma/client": "^6.16.1",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
@@ -35,6 +36,7 @@
     "eslint": "^0.2.0",
     "eslint-config-next": "^0.2.4",
     "postcss": "^8.5.6",
+    "prisma": "^6.16.1",
     "tailwindcss": "^4.1.13",
     "tw-animate-css": "^1.3.8",
     "typescript": "^5"
