--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,5 +23,17 @@
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules"],
+  "generator": {
+    "client": {
+      "provider": "prisma-client-js",
+      "output": "../lib/generated/prisma"
+    }
+  },
+  "imports": {
+    "PrismaClient": {
+      "from": "@prisma/client",
+      "namedImports": ["PrismaClient"]
+    }
+  }
 }
