--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cmdk": "^1.1.1",
     "lucide-react": "^0.542.0",
     "next": "^14.2.32",
+    "next-cloudinary": "^6.16.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.62.0",
