--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@stripe/stripe-js": "^7.9.0",
     "@tanstack/react-table": "^8.21.3",
     "axios": "^1.12.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.542.0",
     "next": "^14.2.32",
     "next-cloudinary": "^6.16.0",
@@ -29,6 +31,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.62.0",
     "react-hot-toast": "^2.6.0",
+    "stripe": "^18.5.0",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.8",
     "zustand": "^5.0.8"
